--- a/Ballerina.toml
+++ b/Ballerina.toml
@@ -1,8 +1,8 @@
 [package]
-distribution = "slbeta6"
+distribution = "2201.0.0"
 org = "ballerinax"
 name = "aws.simpledb"
-version = "1.0.0"
+version = "1.1.0"
 license= ["Apache-2.0"]
 authors = ["Ballerina"]
 keywords= ["IT Operations/Databases", "Cost/Freemium", "Vendor/Amazon"]
